@@ -1,6 +1,9 @@
-name=SVN - Cleanup
+name=SVN - Cleanup (recursive)
 description=Perform SVN cleanup on current project or any local SVN repository
 title=Choose SVN repository to perform cleanup
 canceled=Canceled
-done=Cleanup done!!
-notrepo=Not a local repository
+done={0}:\tcleanup done!!
+notrepo={0} is not a local working copy, skipping.
+norepos=There are no local working copies in {0}. The script will quit now.
+count=Local working copies cleaned up: {0}
+oldver=You are running OmegaT version {0}. This script is intended to run in OmegaT 3.6 and newer.
