@@ -1,6 +1,0 @@
-name=SVN \u2014 \u0410\u0447\u044b\u0441\u0442\u043a\u0430
-description=\u0412\u044b\u043a\u0430\u043d\u0430\u0446\u044c \u0430\u0447\u044b\u0441\u0442\u043a\u0443 SVN \u0434\u043b\u044f \u0431\u044f\u0433\u0443\u0447\u0430\u0433\u0430 \u043f\u0440\u0430\u0435\u043a\u0442\u0430 \u0430\u0431\u043e \u043b\u044e\u0431\u043e\u0433\u0430 \u043b\u044f\u043a\u0430\u043b\u044c\u043d\u0430\u0433\u0430 \u0440\u044d\u043f\u0430\u0437\u044b\u0442\u043e\u0440\u044b\u044f SVN
-title=\u0412\u044b\u0431\u0440\u0430\u0446\u044c \u0440\u044d\u043f\u0430\u0437\u044b\u0442\u043e\u0440\u044b\u0439 SVN \u0434\u043b\u044f \u0430\u0447\u044b\u0441\u0442\u043a\u0456
-canceled=\u0421\u043a\u0430\u0441\u0430\u0432\u0430\u043d\u0430
-done=\u0410\u0447\u044b\u0441\u0442\u043a\u0430 \u0437\u0440\u043e\u0431\u043b\u0435\u043d\u0430\u044f!
-notrepo=\u041d\u0435 \u0437\u044c\u044f\u045e\u043b\u044f\u0435\u0446\u0446\u0430 \u043b\u044f\u043a\u0430\u043b\u044c\u043d\u044b\u043c \u0440\u044d\u043f\u0430\u0437\u044b\u0442\u043e\u0440\u044b\u0435\u043c
