@@ -1,6 +1,0 @@
-name=SVN - Cleanup / Vymaz\u00e1n\u00ed
-description=Prov\u00e9st maz\u00e1n\u00ed SVN v aktu\u00e1ln\u00edm projektu nebo jin\u00e9m m\u00edstn\u00edm repozit\u00e1\u0159i SVN
-title=Vybrat repozit\u00e1\u0159 SVN, ve kter\u00e9m se m\u00e1 prov\u00e9st maz\u00e1n\u00ed.
-canceled=Zru\u0161eno
-done=Maz\u00e1n\u00ed u konce!
-notrepo=Nen\u00ed m\u00edstn\u00edm repozit\u00e1\u0159em
