@@ -1,6 +1,0 @@
-name=SVN - Garbiketa
-description=Gauzatu SVN garbiketa uneko proiektuan edo edozein SVN biltegi lokaletan
-title=Aukeratu garbituko den SVN biltegia
-canceled=Utzi egin da
-done=Garbiketa egina!
-notrepo=Ez da biltegi lokala
