@@ -1,6 +1,0 @@
-name=Nettoyage SVN
-description=Effectue un nettoyage SVN sur le projet actuel ou sur n'importe quel r\u00e9f\u00e9rentiel local
-title=Choisir le r\u00e9f\u00e9rentiel SVN sur lequel effectuer le nettoyage
-canceled=Annul\u00e9
-done=Nettoyage effectu\u00e9 !!
-notrepo=Il ne s'agit pas d'un r\u00e9f\u00e9rentiel local
