@@ -1,6 +1,0 @@
-name=Reparation de SVN
-description=Exequer le reparation de SVN sur le projecto actual o qualcunque repositorio local de SVN
-title=Eliger le repositorio SVN repositorio pro effectuar le Reparation
-canceled=Cancellate
-done=Reparation facite!!
-notrepo=Non a un repositorio local
