@@ -1,6 +1,0 @@
-name=SVN - Pulizia
-description=Esegue la pulizia SVN sull'attuale progetto o su qualsiasi deposito SVN locale
-title=Scegliere il deposito SVN su cui eseguire la pulizia
-canceled=Ripulito
-done=Pulizia eseguita!!
-notrepo=Non un deposito locale
