@@ -1,6 +1,0 @@
-name=SVN - \u30af\u30ea\u30fc\u30f3\u30a2\u30c3\u30d7
-description=\u73fe\u5728\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u307e\u305f\u306f\u30ed\u30fc\u30ab\u30eb\u306e\u4efb\u610f\u306e SVN \u30ea\u30dd\u30b8\u30c8\u30ea\uff08\u4f5c\u696d\u30b3\u30d4\u30fc\uff09\u306b\u5bfe\u3057\u3066\u3001\u30af\u30ea\u30fc\u30f3\u30a2\u30c3\u30d7\uff08\u77db\u76fe\u3057\u305f\u72b6\u614b\u3092\u89e3\u6c7a\u3059\u308b\uff09\u3092\u5b9f\u884c\u3057\u307e\u3059
-title=\u30af\u30ea\u30fc\u30f3\u30a2\u30c3\u30d7\u3092\u5b9f\u884c\u3057\u305f\u3044\u30ea\u30dd\u30b8\u30c8\u30ea\u3092\u9078\u3093\u3067\u304f\u3060\u3055\u3044
-canceled=\u53d6\u308a\u6d88\u3055\u308c\u307e\u3057\u305f
-done=\u30af\u30ea\u30fc\u30f3\u30a2\u30c3\u30d7\u3092\u5b9f\u884c\u3057\u307e\u3057\u305f
-notrepo=\u30ed\u30fc\u30ab\u30eb\u306e\u30ea\u30dd\u30b8\u30c8\u30ea\u3067\u306f\u3042\u308a\u307e\u305b\u3093
