@@ -1,6 +1,0 @@
-name=SVN - Opschonen
-description=SVN opschonen uitvoeren op huidige project of een lokale SVN-opslagplaats
-title=SVN-opslagplaats waar opschonen moet worden uitgevoerd
-canceled=Geannuleerd
-done=Opschonen voltooid!!
-notrepo=Geen lokale opslagplaats
