@@ -1,6 +1,0 @@
-name=SVN - Opprydding
-description=Utf\u00f8r SVN-opprydding i gjeldende prosjekt eller hvilket som helst lokalt SVN-repositorium
-title=Velg SVN-repositorium for \u00e5 utf\u00f8re opprydding
-canceled=Avbrutt
-done=Opprydding ferdig!!
-notrepo=Ikke et lokalt repositorium
