@@ -1,6 +1,0 @@
-name=SVN - Cleanup
-description=Executa o comando cleanup do SVN no projeto atual ou qualquer outro reposit\u00f3rio SVN local
-title=Selecione o reposit\u00f3rio SVN para executar o comando cleanup
-canceled=Cancelado
-done=Comando cleanup conclu\u00eddo!
-notrepo=N\u00e3o \u00e9 um reposit\u00f3rio local
