@@ -1,6 +1,0 @@
-name=SVN - \u043e\u0447\u0438\u0449\u0435\u043d\u043d\u044f
-description=\u0412\u0438\u043a\u043e\u043d\u0430\u0442\u0438 \u043e\u0447\u0438\u0449\u0435\u043d\u043d\u044f SVN \u0443 \u043f\u043e\u0442\u043e\u0447\u043d\u043e\u043c\u0443 \u043f\u0440\u043e\u0435\u043a\u0442\u0456 \u0430\u0431\u043e \u0443 \u0431\u0443\u0434\u044c-\u044f\u043a\u043e\u043c\u0443 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u043e\u043c\u0443 \u0441\u0445\u043e\u0432\u0438\u0449\u0456 SVN
-title=\u0412\u0438\u0431\u0435\u0440\u0456\u0442\u044c \u0441\u0445\u043e\u0432\u0438\u0449\u0435 SVN, \u044f\u043a\u0435 \u043c\u0430\u0454 \u0431\u0443\u0442\u0438 \u043e\u0447\u0438\u0449\u0435\u043d\u0435
-canceled=\u0421\u043a\u0430\u0441\u043e\u0432\u0430\u043d\u043e
-done=\u041e\u0447\u0438\u0449\u0435\u043d\u043d\u044f \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e!
-notrepo=\u041f\u043e\u0442\u043e\u0447\u043d\u0438\u0439 \u043f\u0440\u043e\u0435\u043a\u0442 \u043d\u0435 \u0454 \u043b\u043e\u043a\u0430\u043b\u044c\u043d\u0438\u043c \u0441\u0445\u043e\u0432\u0438\u0449\u0435\u043c
